# django-bandeja

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
bandeja/: __init__.py  apps.py  conf.py  signals.py  urls.py
bandeja/assignment/: __init__.py  base.py  least_busy.py  round_robin.py
bandeja/channels/: __init__.py  base.py  whatsapp_cloud.py
bandeja/macros/: __init__.py  builtin.py  executor.py  registry.py
bandeja/management/commands/: bandeja_despertar_pospuestos.py
bandeja/migrations/: 0001_initial.py  0002_conversacionetiqueta_etiqueta_respuestaguardada_and_more.py  0003_backfill_conversaciones.py  0004_macro_ejecucionmacro.py  0005_contacto_fusionado_en_bitacoracontacto_encuestacsat_and_more.py
bandeja/models/: __init__.py  agente.py  bitacora_contacto.py  canal.py  contacto.py  conversacion.py  csat.py  etiqueta.py  macro.py  mencion.py  mensaje.py  respuesta.py
bandeja/services/: __init__.py  channels.py  intake.py  menciones.py  merge.py  outbound.py  reportes.py  sla.py
bandeja/templates/bandeja/: _base.html
bandeja/templates/bandeja/etiquetas/: list.html
bandeja/templates/bandeja/inbox/: _estado_badge.html  _etiquetas_chips.html  _lista.html  _objeto_negocio_panel.html  _timeline.html  (+2 more)
bandeja/templatetags/: bandeja_tags.py
bandeja/views/: __init__.py  inbox.py  webhook.py
tests/: conftest.py  settings.py  test_conversacion.py  test_fase5.py  test_intake.py  test_macros.py  test_round_robin.py  test_smoke.py  test_snooze_sla.py  test_views.py  test_whatsapp_adapter.py  urls.py
(+1 files in other folders)
