[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indunnova-bandeja"
version = "0.0.1"
description = "Bandeja omnichannel reusable para aplicativos Django de Indunnova"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Indunnova", email = "mrodriguez@indunnova.com" }]
dependencies = [
    "Django>=5.1,<6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["bandeja*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
bandeja = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
